[package]
name = "glowenft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.1"
solana-program = "1.8.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

thiserror = "1.0.29"
url = "2.2.2"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.8.0"
solana-sdk = "1.8.0"
solana-validator = "1.8.0"

[features]
default = ["entrypoint"]
test-bpf = []
entrypoint = []
